      Jeroen Dekkers for the report and the patch.  (Closes: #616505)
  * checks/huge-usr-share:
    + [NT] Removed assumption that there is always files in usr/share.

  * data/changelog-file/ubuntu-dists:
    + [NT] Added oneiric as valid Ubuntu distribution.  Thanks to Benjamin
      Drung for the patch.
  * data/spelling/corrections:
    + [NT] Added more misspellings.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Fri, 25 Feb 2011 17:48:59 +0000

lintian (2.5.0~rc1) experimental; urgency=low

  The "welcome Niels Thykier!" release.

  * Summary of tag changes:
    + Added:
      - build-depends-on-specific-java-doc-package
      - depends-on-specific-java-doc-package
      - unneeded-build-dep-on-quilt
      - description-synopsis-starts-with-article
      - needless-dependency-on-jre
      - temporary-debhelper-file
      - compressed-objects.inv
      - unused-build-dependency-on-cdbs
      - python-debug-in-wrong-location
      - debian-watch-contains-dh_make-template
      - missing-dependency-on-python-central
      - python-module-in-wrong-location
      - missing-dependency-on-python-support
      - package-installs-python-bytecode
      - debhelper-maintscript-needs-versioned-build-depends
    + Removed:
      - embedded-zlib (now in embedded-library)
      - embedded-libpng (now in embedded-library)
      - embedded-libjpeg (now in embedded-library)
      - embedded-libopenjpeg (now in embedded-library)
      - package-installs-python-pyc (replaced by
        package-installs-python-bytecode)

  * checks/*:
    + [NT] Use the new pre-sorted file {index,info} when iterating over
      files.
    + [NT] All checks now report files without any "./" or "/" prefix.
      This may break existing overrides.  (Closes: #534940)
  * checks/binaries:
    + [RA] Exclude kfreebsd-kernel-di-{amd64,i386} from the
      embedded-zlib check since it's in the kernel.  (Closes: #593397)
    + [RG] Add swipl to the list of known interpreters.  (Closes: #591316)